# Dreamteam

./: .gitignore  README.md  pyproject.toml  requirements.txt
dreamteam_project/: manage.py
dreamteam_project/api/: models.py  urls.py
dreamteam_project/api/API/: mixins.py  permissions.py  resources.py  serializers.py  views.py
dreamteam_project/api/migrations/: 0001_initial.py
dreamteam_project/api/tests/: test_serializers.py  test_views.py
dreamteam_project/dreamteam_project/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
